MusicX/src/index.css
html{
    overflow-x:hidden;
}
body{
    background-image: url("../img/1.jpg");
    -webkit-background-image: url("../img/1.jpg") ;
    -webkit-background-size: cover;
    height: 100%;
    overflow-x: hidden;
    /*background-position: center;*/
    background-size: cover;
    background-repeat: repeat;
}
#error{
    margin-top: 2px !important;
    color: whitesmoke;
    font-size: x-large;
    margin-left: 10px;
    -webkit-margin-before: 10px;
}
#error a{
    color: #ff1e0d !important;
}

#myModal{
    display: none;
    background-color: whitesmoke;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    box-shadow: 0 0 25px 5px grey;
    -webkit-box-shadow: 0 0 25px 5px grey;
    width: 500px;
    height: 100px;
}

@-webkit-keyframes bounceInDown {
    from, 60%, 75%, 90%, to {
        -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
    0% {
        opacity: 0;
        -webkit-transform: translate3d(0, -3000px, 0);
        transform: translate3d(0, -3000px, 0); }
    60% {
        opacity: 1;
        -webkit-transform: translate3d(0, 25px, 0);
        transform: translate3d(0, 25px, 0); }
    75% {
        -webkit-transform: translate3d(0, -10px, 0);
        transform: translate3d(0, -10px, 0); }
    90% {
        -webkit-transform: translate3d(0, 5px, 0);
        transform: translate3d(0, 5px, 0); }
    to {
        -webkit-transform: none;
        transform: none; } }

@keyframes bounceInDown {
    from, 60%, 75%, 90%, to {
        -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
    0% {
        opacity: 0;
        -webkit-transform: translate3d(0, -3000px, 0);
        transform: translate3d(0, -3000px, 0); }
    60% {
        opacity: 1;
        -webkit-transform: translate3d(0, 25px, 0);
        transform: translate3d(0, 25px, 0); }
    75% {
        -webkit-transform: translate3d(0, -10px, 0);
        transform: translate3d(0, -10px, 0); }
    90% {
        -webkit-transform: translate3d(0, 5px, 0);
        transform: translate3d(0, 5px, 0); }
    to {
        -webkit-transform: none;
        transform: none; } }

.bounceInDown {
    -webkit-animation-name: bounceInDown;
    animation-name: bounceInDown;
}

#form .panel{
    /*margin-top: 10%;*/
    position: absolute;
    /*top:50%;*/
    left: 50%;
    transform: translateX(-50%);
    -webkit-transform: translateX(-50%);
    width: 350px!important;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    border-width: 5px;
    filter:none;
    -webkit-filter: none;
}


#search-key{
    margin-left: 10px !important;
    -webkit-margin-before: 10px !important;
    width:100%;
    font-size: large;
    background-color: whitesmoke;
}

#main1.col-sm-4.col-xs-12.panel.panel-default{
    margin: 10px;
    padding: 10px;
    display: inline;
    height: 92px !important;
    width: 250px;
}
.panel-body{
    word-break: break-all;
    word-wrap: break-word;
    padding-top: 5px !important;
}

h6{
    margin: 2px !important;
}
#form{
    z-index: 10;
}

.header1 img {
    float: left;
    /*width: 100px;*/
    /*height: 100px;*/
}

.header1 h1 {
    position: relative;
    left: 10px;
}

#logo{
    padding-top: 5px !important;
    height:10%;
    width: 10%;
}

@media only screen and (max-device-width: 767px) {
    #logo {
        float: left;
        padding-top: 5px !important;
        width: 10% !important;;
        height: 16% !important;
    }
    #search-btn{
        width: 80%;
        margin-left:12%;
    }
    #search-key{
        margin-left: 2px !important;
        width: 97.5%;
    }
}

